Changed "Dordt College" to "Dordt University" in some places

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <img src="cd_common/transparent_pixel.gif" height="1" width="1">
   <H1>Dr. Douglas F. De Boer, P.E.</H1><P>
         Professor of Engineering<BR>
-        Dordt College<BR>
+        Dordt University<BR>
         498 Fourth Avenue NE<BR>
         Sioux Center IA 51250</P>
   </TD>
@@ -116,7 +116,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 
      Here is Prof. De Boer's general <b><A HREF="S19/SCH_S19.pdf" 
      >Weekly Schedule</A></b>.<br>
-	 Professor De Boer is now working for Dordt College on a half-time basis.
+	 Professor De Boer is now working for Dordt University on a half-time basis.
 	 </blockquote><br>
 	 
 
@@ -401,22 +401,22 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 <!--Engineering Department-->
 <TR><td width="130" style="vertical-align: top"><div>
         <A HREF = "https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-        <br><img src="INDEX/ENGR_Thumbnail.png" width="125" height="64" border="0">
+        <br><img src="INDEX/ENGR_DU_Thumbnail.png" width="125" height="51" border="0">
 		</a> 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
-	    Dordt College <A HREF = "redirect/Dordt_Engineering.htm"
+	    Dordt University <A HREF = "redirect/Dordt_Engineering.htm"
 	    >Engineering Department</A>.<br><br>
     </div></td>
 </tr>
 <!--Dordt College-->
 <TR><td width="130" style="vertical-align: top"><div>
         <A HREF = "http://www.dordt.edu/">
-        <br><img src="INDEX/Dordt_Thumbnail.png" width="125" height="66" border="0">
+        <br><img src="INDEX/Dordt_U_Thumbnail.png" width="125" height="66" border="0">
 		</a> 
 	</div></td>
 	<td style="vertical-align: bottom"><div>
-	    Dordt College <A HREF = "http://www.dordt.edu/"
+	    Dordt University <A HREF = "http://www.dordt.edu/"
 	    >Homepage</A>.<br><br>
     </div></td>
 </tr></td></table>
@@ -424,7 +424,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 1/08/2019.</small><BR><br><br>&nbsp;
+<small>This page last edited on 5/13/2019.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR></TABLE>
