--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -41,13 +41,18 @@
     <TD>
         <P style="text-align: center;"><B><A target="_top"
         HREF="https://dfdeboer.github.io/redirect/Dordt_Engineering.htm">
-        Dordt College Engineering Department</A><br>
-        Past courses instructed by Professor De Boer at Dordt College</b><br>
+        Dordt University Engineering Department</A><br>
+        Past courses instructed by Professor De Boer at Dordt University</b><br>
 		Click a link to access information for a particular semester.<br><br><small>
 		
 		In the list below, "U" = "summer semester", "F" = "fall semester" 
 		and "S" = "spring semester."<br>
         Example:  "F09" means the "fall semester of 2009."<br>
+		Prior to May 13, 2019, "Dordt University" was known as, "Dordt College"<br>
+		Web pages for courses taught prior to U19 will show the name, "Dordt College"
+		on them in various places.<br>
+		The change from College to University was only symbolic.<br>
+		The ownership, administration, accreditation status and so forth was unchanged by the name change.<br>
 		Professor De Boer started using web pages for course management in S02.  
 		<br> If a date prior to S02 is shown but it is not a link it means the 
 		course was instructed by Professor De Boer during that semester but 
@@ -215,7 +220,7 @@
 		<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 		<p align="center"><b>Courses outside of engineering that Professor 
 		De Boer has taught 
-		at Dordt College</b></p><p>
+		at Dordt University</b></p><p>
 		
 		CORE 399, Calling, Task, and Culture ("Thrifty" mentor group)<br>
 		<a href="F17/CORE_399F17.HTM">F17</a><br><br>
@@ -232,7 +237,7 @@
 		<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 		<p align="center"><b>Courses that Professor De Boer has taught 
 		at <br>The University of Colorado at Colorado Springs (UCCS)</b><br><small>
-		From F91 through S94 Professor De Boer was on a leave of absence from Dordt College to UCCS.<br>
+		From F91 through S94 Professor De Boer was on a leave of absence from Dordt University to UCCS.<br>
 		(Course numbers are UCCS's numbers)</small></p><p>
 		
 		EGR 221R, Linear Circuits Recitation<br>
@@ -270,7 +275,7 @@
         <HR><p>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 6/14/2018)</small></P>
+         <small>(This page last updated on 5/1416/2019)</small></P>
     </TD>
 </TR>
 
