Expunged "Dordt College" from various files

--- a/errata/Alexander_Sadiku/4th/A_S_4_ER.HTM
+++ b/errata/Alexander_Sadiku/4th/A_S_4_ER.HTM
@@ -34,10 +34,10 @@
    <table align="center" width="540"><tr><td width="540">
 
 <p align="center">
-<a href="http://www.dordt.edu/academics/programs/engineering/">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
-<a href="HTTP://HOMEPAGES.DORDT.EDU/~DDEBOER/ERRATA/err.htm"> 
-                       TEXTBOOK ERRATA</a><br>
+<P align="center"><A 
+HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../err.htm" 
+                       >TEXTBOOK ERRATA</a><br>
                     (last update 1/28/2017)<br>
                                <br>
    <img src="Alexander_Sadiku_Cover.jpg" width="108" height="134"
