--- a/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
+++ b/errata/Alexander_Sadiku/6th/A_S_6_ER.HTM
@@ -43,10 +43,10 @@
 <BODY bgcolor="#FFFAEE">
 <table align="center" width="540"><tr><td width="540">
 
-<p align="center">
-<a href="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
-<a href="../../../ERRATA/err.htm"> 
+<P align="center">
+<A 
+HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update 11/05/2018)<br>
                                <br>
