--- a/errata/DeBoer/DB_10_ER.HTM
+++ b/errata/DeBoer/DB_10_ER.HTM
@@ -21,8 +21,8 @@ A:hover {
 <BODY>
 <table align="center" width=504><tr><td width="504">
 <P align="center"><A 
-HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-             DORDT COLLEGE ENGINEERING DEPARTMENT</A><br>
+HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../err.htm">
 <a href="../err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update  1/05/2010)<br>
