--- a/errata/Dorf_Svoboda/6th/D_S_6_ER.HTM
+++ b/errata/Dorf_Svoboda/6th/D_S_6_ER.HTM
@@ -22,8 +22,8 @@
 <BODY><table align="center" width="504"><tr><td width="504">
 
 <p align="center">
-<a href="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br><a href="../../err.htm"> 
+<A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update 1/06/2010)<br>
                                <br>
