--- a/errata/ERR.HTM
+++ b/errata/ERR.HTM
@@ -23,10 +23,8 @@
    
    <table align="center" width=504><tr><td width="504">
 
-<P align="center"><A HREF=
-"https://dfdeboer.github.io/redirect/Dordt_Engineering.htm">
-            DORDT COLLEGE ENGINEERING DEPARTMENT</A><br>
-            PROF. DE BOER's TEXTBOOK ERRATA LISTS</p><br></td></tr>
+<P align="center"><a href="../index.html">
+            PROF. DE BOER</a>'s TEXTBOOK ERRATA LISTS</p><br></td></tr>
    </table>
    
    <table border="0" cellspacing="0" cellpadding="5" align="center"
