--- a/errata/Mano_Kime/3rd/MK_3_ERR.HTM
+++ b/errata/Mano_Kime/3rd/MK_3_ERR.HTM
@@ -10,11 +10,10 @@ A:visited {color: #CC9900; font-weight:bold;
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<p align="center"><A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-            DORDT COLLEGE ENGINEERING DEPARTMENT</A><br><a href="../../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
-                    (last update 4/20/2012)<br>
+<p align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
+				  (last update 4/20/2012)<br>
                                <br>
    <img src="Mano_Kime_Text_3E.jpg" width="108" height="143"><br>
   Mano and Kime, <I>Logic and Computer Design Fundamentals</I>, 
