--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -10,10 +10,9 @@ A:visited {color: #CC9900; font-weight:bold;
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<p align="center"><A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-            DORDT COLLEGE ENGINEERING DEPARTMENT</A><br><a href="../../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
+<p align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
                    (last update 2/23/2016)<br>
                                <br>
    <img src="Mano_Kime_Martin_5e.jpg" width="110" height="145"><br>
