--- a/errata/Mohan/1/Mohan_1_ERR.HTM
+++ b/errata/Mohan/1/Mohan_1_ERR.HTM
@@ -21,10 +21,8 @@ A:hover {
 
 <BODY><table align="center" width="504"><tr><td width="504">
 
-<p align="center">
-<a href="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
-<a href="../../err.htm"> 
+<p align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                  (last update 8/26/2013)<br><br>
 
