--- a/errata/Ogata/4th/O_4_ERR.HTM
+++ b/errata/Ogata/4th/O_4_ERR.HTM
@@ -22,11 +22,10 @@
 <BODY><table align="center" width="504"><tr><td width="504">
 
 <p align="center">
-<a href="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
-<a href="../../err.htm"> 
+<A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                 (last update  8/12/2008)<br><br>
+				   (last update  8/12/2008)<br><br>
 
 <img src="Ogata4_cover_art_color_small.gif" width="110" height="127"
                 alt="Image of textbook cover"><br>
