--- a/errata/Polking_et_al/2nd/P_2_ER.HTM
+++ b/errata/Polking_et_al/2nd/P_2_ER.HTM
@@ -10,13 +10,10 @@ A:visited {color: #CC9900; font-weight:bold;
 </HEAD>
 <BODY>
 <table align="center" width="504"><tr><td width="504">
-<P align="center"><A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/mathematics">
-                   DORDT COLLEGE MATH</a> AND <br><A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/computer-science">
-               COMPUTER SCIENCE DEPARTMENT</A><br>
-                       TEXTBOOK ERRATA<br>
-                    (last update 12/06/07)<br>
+<P align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
+				   (last update 12/06/07)<br>
                                <br>
     <img src="Polking_2.jpg" width="113" height="144"
                  alt="Photo of textbook"><br><b>
