--- a/errata/Proakis_Manolakis/PM_3_ERR.HTM
+++ b/errata/Proakis_Manolakis/PM_3_ERR.HTM
@@ -4,11 +4,12 @@
 <TITLE>Proakis & Manolakis 3e Errata</TITLE>
 </HEAD>
 <BODY><PRE>
-               <A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering"><Font 
+                    <A HREF="../../index.html"><Font 
 color = "CC9900" style="text-decoration: none"
-           ><b>DORDT COLLEGE ENGINEERING DEPARTMENT</b></font></A>
-                         TEXTBOOK ERRATA  (Last update: 11/14/06) 
+           ><b>Professor De Boer's list of</b></font></A>
+                         <a href="../ERR.HTM"><Font color = "CC9900" style="text-decoration: none"
+						>TEXTBOOK ERRATA</a>
+                     (Last update: 11/14/06)</font> 
                          ---------------
                       Proakis and Manolakis
               Digital Signal Processing Principles,
