--- a/errata/Valvano/V_1_ERR.HTM
+++ b/errata/Valvano/V_1_ERR.HTM
@@ -4,7 +4,8 @@
 <TITLE>EGR 304 Links</TITLE>
 </HEAD>
 <BODY><PRE>
-               DORDT COLLEGE ENGINEERING DEPARTMENT
+                    <A HREF="../../index.html">Professor De Boer</A>'s list of<br>
+                         <a href="../../ERRATA/err.htm">TEXTBOOK ERRATA</a><br>
                MICROPROCESSOR INTERFACING -- EGR 304
                           (Spring 2005)
 
