--- a/errata/Alexander_Sadiku/5th/A_S_5_ER.HTM
+++ b/errata/Alexander_Sadiku/5th/A_S_5_ER.HTM
@@ -34,10 +34,10 @@
 <table align="center" width="540"><tr><td width="540">
 
 <p align="center">
-<a href="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br> 
-<a href="../../err.htm"> 
-                       TEXTBOOK ERRATA</a><br>
+<P align="center"><A 
+HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../err.htm"
+                       >TEXTBOOK ERRATA</a><br>
                     (last update 1/05/2017)<br>
                                <br>
    <img src="Alexander_Sadiku_Cover_5e.jpg" width="120" height="154"
