--- a/errata/DeBoer/DB_09_ER.HTM
+++ b/errata/DeBoer/DB_09_ER.HTM
@@ -20,10 +20,9 @@ A:hover {
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<P align="center"><A 
-HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-             DORDT COLLEGE ENGINEERING DEPARTMENT</A><br>
-<a href="HTTP://HOMEPAGES.DORDT.EDU/~DDEBOER/ERRATA/err.htm"> 
+<P align="center">
+<A HREF="../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update  4/06/2009)<br>
                                 <br>
