--- a/errata/Dorf_Svoboda/7th/D_S_7_ER.HTM
+++ b/errata/Dorf_Svoboda/7th/D_S_7_ER.HTM
@@ -20,9 +20,8 @@ A:hover {
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<P align="center"><A 
-HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-             DORDT COLLEGE ENGINEERING DEPARTMENT</A><br><a href="../../err.htm"> 
+<P align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
                     (last update  1/06/2010)<br>
                                <br>
