--- a/errata/Mano_Kime/4th/MK_4_ERR.HTM
+++ b/errata/Mano_Kime/4th/MK_4_ERR.HTM
@@ -10,10 +10,10 @@ A:visited {color: #CC9900; font-weight:bold;
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<p align="center"><A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-            DORDT COLLEGE ENGINEERING DEPARTMENT</A><br><a href="../../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
+<p align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
+TEXTBOOK ERRATA</a><br>
                    (last update 1/31/2013)<br>
                                <br>
    <img src="Mano_Kime_4e.jpg" width="108" height="151"><br>
