--- a/errata/Proakis_Salehi/P_S_ER.HTM
+++ b/errata/Proakis_Salehi/P_S_ER.HTM
@@ -11,10 +11,9 @@ A:hover {text-decoration:underline;}
 <body>
 <table align="center" width="504"><tr><td width="504">
 <p align="center">
-<a href="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-           DORDT COLLEGE ENGINEERING DEPARTMENT</a><br><a href=
-		   "../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
+<A HREF="../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
                     (last update 1/30/2012)<br>
                        
                                <br>
