--- a/errata/Sedra_Smith/6th/S_S_6_ER.HTM
+++ b/errata/Sedra_Smith/6th/S_S_6_ER.HTM
@@ -11,11 +11,9 @@
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<P align="center"><A 
-HREF="http://www.dordt.edu/academics/departments/engineering/"><B>
-              DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
-			  "../../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
+<P align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
                     (last update 4/21/2015)<br> 
                                <br>
     <img src="Sedra_Smith_6.gif" width="106" height="133"
