--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -11,11 +11,9 @@
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<P align="center"><A 
-HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering"><B>
-              DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
-			  "../../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
+<P align="center"><A HREF="../../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
                     (last update 4/23/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
