--- a/errata/Valvano/V_2_ERR.HTM
+++ b/errata/Valvano/V_2_ERR.HTM
@@ -10,10 +10,9 @@ A:visited {color: #CC9900; font-weight:bold;
 </HEAD>
 <BODY>
 <table align="center" width=504><tr><td width="504">
-<P align="center"><A 
-HREF="hhttps://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
-             DORDT COLLEGE ENGINEERING DEPARTMENT</A><br><a href="../err.htm"
-                       >TEXTBOOK ERRATA</a><br>
+<P align="center"><A HREF="../../index.html">
+                   Professor De Boer</A>'s list of<br><a href="../../ERRATA/err.htm"> 
+                       TEXTBOOK ERRATA</a><br>
                     (last update 1/05/07)<br>
                                <br>
                    <img src="VALVANO2.GIF"><br>
