More college-to-university changes

--- a/F19/204/204F19_Textbook_Requisitions.htm
+++ b/F19/204/204F19_Textbook_Requisitions.htm
@@ -24,8 +24,8 @@
 </HEAD>
 <body>
 <table width="512" align="center"><tr><td width="100%" align="center">
-<A href="../redirect/Dordt_Engineering.htm">
-            Dordt College Engineering Department</A><br><b>
+<A href="../../redirect/Dordt_Engineering.htm">
+            Dordt University Engineering Department</A><br><b>
  EGR-204-01: Introduction to Microprocessors and Digital Circuits (including lab)<br>
                         Fall 2019</b>
 <br><br><br></td></tr></table>
