--- a/GDS.HTM
+++ b/GDS.HTM
@@ -11,11 +11,8 @@ TABLE {font-family:"verdana"; font-size:10pt;} -->
 </HEAD>
 <BODY>
 <table align="center" width="470"><tr><td>
-<p Align="center">
-<A HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering"
-           >DORDT COLLEGE ENGINEERING DEPARTMENT</A></p>
-<P Align="center"><B>
-              PROFESSOR DE BOER'S METHOD OF GRADING</b></p><p>
+<P Align="center"><a href="index.html"
+              >PROFESSOR DE BOER</a>'s <b>METHOD OF GRADING</b></p><p>
 
 <p align="center"><a href=
 "https://commons.wikimedia.org/wiki/File:Finish_line_%28end_of_se_-_panoramio.jpg" target="_blank">
