--- a/integrity.htm
+++ b/integrity.htm
@@ -19,7 +19,7 @@ TABLE {font-family:"verdana"; font-size:10pt;} -->
 <P Align="center"><B>
                    STANDARDS of SCHOLARSHIP</b><br>
             For Professor De Boer's Classes</b><br>
- <small><font color="grey">(Last updated on 7/14/2016)</font></small></p>
+ <small><font color="grey">(Last updated on 5/21/2019)</font></small></p>
 
 <P><B>Homework is for Learning by Showing How<br>
 </B><a name="Show_How"></a>
@@ -98,17 +98,15 @@ erase (or edit).<p></p>
 
 A good quality 0.5&nbsp;mm mechanical pencil (e.g. Pentel brand 
 <a href=
-"http://homepages.dordt.edu/ddeboer/Canvas_common/pentel_p205.jpg"
+"Canvas_common/pentel_p205.jpg"
 >model P205</a> or equivalent) and a good white plastic eraser 
 (e.g. Pentel "<a href=
-"http://homepages.dordt.edu/ddeboer/Canvas_common/ZE22A_sm.gif"
+"Canvas_common/ZE22A_sm.gif"
 >Clic</a>") will pay for themselves many times over with time 
 saved when used generously.  This equipment is available at the 
 <a href=
-"http://www.dordt.edu/services_support/bookstore/">Dordt College 
-Bookstore</a> and at other local merchants such as <a href=
-"https://maps.google.com/maps?q=the+pencil+box+sioux+center&ie=UTF-8&ei=3zbkUffvHMGZyQHNrIDIDg&ved=0CAgQ_AUoAg"
->The Pencil Box</a> and 
+"http://www.dordt.edu/services_support/bookstore/">Dordt University 
+Campus Store</a> and at other local merchants such as  
 <a href="http://www.walmart.com/storeLocator/ca_storefinder_details_short.do?edit_object_id=1152"
 >Walmart</a>. </P><P> 
 
@@ -163,7 +161,7 @@ unless precision is a specific goal of the problem.) Do not
 allow leading decimals.  (Right: 0.125, Wrong: .125) </P><P>
 
                  <P align="center"><IMG 
-Src="http://homepages.dordt.edu/~ddeboer/cd_common/HWSTD/No_Leading_Decimals.gif"><BR>
+Src="cd_common/HWSTD/No_Leading_Decimals.gif"><BR>
        <B>Figure 1.  No Leading Decimals!</B></P><P><BR>
 
 
@@ -179,7 +177,7 @@ the graph is either too small or not scaled appropriately.
 below.</P> 
 
            <P align="center"><IMG 
-Src="http://homepages.dordt.edu/~ddeboer/cd_common/HWSTD/graph.gif"><BR>
+Src="cd_common/HWSTD/graph.gif"><BR>
        <B>Figure 2.  An example of a properly labeled <BR>
               graph that is minimally large enough.</B></P><P><BR>
 
@@ -212,8 +210,8 @@ Use calculators and computers appropriately to perform routine
 and tedious operations and calculations.  Computers are also 
 ideal for producing clear and accurate graphs.</p><p> 
 
-In sympathy with <a href=
-"http://blogs.dordt.edu/ddeboer/2012/05/30/what-calculator-is-best-for-engineering/">engineering department guidelines</a>, Professor De Boer
+In sympathy with <!--<a href=
+"http://blogs.dordt.edu/ddeboer/2012/05/30/what-calculator-is-best-for-engineering/">-->engineering department guidelines<!--</a>-->, Professor De Boer
 only allows <a href=
 "http://ncees.org/exams/calculator/"
 >NCEES approved calculators</a> to be used on tests and final 
@@ -384,22 +382,19 @@ src="cd_common/HWSTD/home_ph.gif">).
 </p><p> 
 
 If you need (or want) help more frequently, consult the secretary 
-at the ASK center and request "peer tutoring." (Or fill in an 
-online form to make the request, see <a 
-href="https://dcc.dordt.edu/services/aec/peer_tutoring">this 
-page</a> and click on the "Tutoring Request Form" link near the 
-bottom of the page to get started.) Professor De Boer believes 
+at the ASK center and request "peer tutoring." See <a 
+href="https://www.dordt.edu/academics/academic-enrichment-center/peer-tutoring">this 
+page</a> to get started with peer tutoring. Professor De Boer believes 
 that the grade of most any student can be improved by about a 
 half or a full letter grade simply by routine participation in 
-the tutorial services of the ASK center.  (Yes, that takes time 
-and work, but it may be worth it for you.)</p><p> 
+the tutorial services.  (Yes, that takes time and work, but it 
+may be worth it for you.)</p><p> 
 
 Tutorial help is available for many 100 and 200 numbered courses 
-at Dordt College, and for some other courses too, so <a 
-href="https://dcc.dordt.edu/services/aec/peer_tutoring">ASK!</a>  
-When tutorial help is offered for a class, any student in the 
-class may participate.  The ASK center is located in the lower 
-level of the library.<br><br> 
+at Dordt University, and for some other courses too, so <a 
+href="https://www.dordt.edu/academics/academic-enrichment-center/peer-tutoring">ASK</a>  
+for peer tutoring!  When tutorial help is offered for a class, any student in the 
+class may participate.  <br><br> 
 
 <!--  I think it works now via dcc  
 <small>** Link only works on-campus or via (put left angle here)!-- OLD PROXY 
