--- a/Texts.htm
+++ b/Texts.htm
@@ -33,7 +33,8 @@
    <p align="center"><img src="Bookshelf.jpg"><br></p>
 
 
-   <p align="center"><b>Professor De Boer's Textbook Requisitions</b></p>
+   <p align="center"><a href="index.html"
+            >Professor De Boer's</a> Textbook Requisitions</b></p>
                                                        <p align="center">
           (Last updated on Monday, April 1, 2019)</p><p>
    
@@ -55,7 +56,7 @@
    <table align="center" width="520" border="0" cellpadding="0">
    
    <!--EGR 204--> 
-   <tr><td colspan="2"><a href="S19/170/170S19_Textbook_Requisitions.htm">
+   <tr><td colspan="2"><a href="F19/204/204F19_Textbook_Requisitions.htm">
    EGR 204, <br>
    Intro. to Microprocessors and Digital Circuits (with lab)</a></td></tr><tr>
    <td width="221">
