--- a/Texts.htm
+++ b/Texts.htm
@@ -36,7 +36,7 @@
    <p align="center"><a href="index.html"
             >Professor De Boer's</a> Textbook Requisitions</b></p>
                                                        <p align="center">
-          (Last updated on Monday, April 1, 2019)</p><p>
+          (Last updated on Monday, May 23, 2019)</p><p>
    
    The links below will show you which textbooks Professor De Boer has 
    ordered for each of his courses.  (For ISBNs and full details, click 
@@ -51,19 +51,37 @@
    to get back to this page from one of the requisition pages linked below.
    <br><br>
 
-   <br><u><b>Fall 2019 course</b></u>
+   <br><u><b>Fall 2019 courses</b></u>
    </td></tr></table>
-   <table align="center" width="520" border="0" cellpadding="0">
    
-   <!--EGR 204--> 
+   
+   <table align="center" width="520" border="0" cellpadding="0">
+ 
+ <!--EGR 204--> 
    <tr><td colspan="2"><a href="F19/204/204F19_Textbook_Requisitions.htm">
-   EGR 204, <br>
-   Intro. to Microprocessors and Digital Circuits (with lab)</a></td></tr><tr>
-   <td width="221">
-   <a href="F19/204/204F19_Textbook_Requisitions.htm">
-   <img src="F19/204/ManoKimeMartin5Cover100x132_0133760634.png" style="border-style: none"/>
-   </td>
-   <td valign="top"><br><br></td>
+       EGR 204, Intro. to Microprocessors and Digital Circuits (with lab)</a></td></tr>
+   <tr><td width="120">
+       <a href="F19/204/204F19_Textbook_Requisitions.htm">
+       <img src="F19/204/ManoKimeMartin5Cover100x132_0133760634.png" style="border-style: none"/>
+       <br><br></td>
+       <td valign="top">
+       Mano, Kime, &amp; Martin<br>
+       Logic and Computer Design Fundamentals, 5th ed.<br>
+       ISBN and important details <a href="F19/204/204F19_Textbook_Requisitions.htm">here</a>   
+   </td></tr>
+	
+   <!--EGR 363--> 
+   <tr><td colspan="2"><a href="F19/363/363F19_Textbook_Requisitions.htm">
+       EGR 363, Introduction to Communication Systems</a></td></tr><tr>
+   <td width="120">
+       <a href="F19/363/363F19_Textbook_Requisitions.htm">
+       <img src="F19/363/Proakis_Salehi_Cover_116x163_tumbnail.jpg" width=100, height=140, style="border-style: none"/>
+       </td>
+       <td valign="top">
+	   Proakis and Salehi<br>
+	   <i>Fundamentals of Communication Systems</i>, 2nd ed.<br>
+       ISBN and important details <a href="F19/363/363F19_Textbook_Requisitions.htm">here</a>
+	   </td>
    </tr>
   
    <!--Horizontal Rule-->  
@@ -92,7 +110,7 @@
 
    <br><u><b>Fall 2017 courses</b></u><br>
    <a href="F17/363/363F17_Textbook_Requisitions.htm">
-      EGR 363, Introduction to Communication Systems, 2nd ed.</a><br>
+      EGR 363, Introduction to Communication Systems</a><br>
    <a href="http://timmaurer.com/simple-money/">CORE 399, 
       Calling, Task, and Culture, "Thrifty" mentor group.</a><br> &nbsp; &nbsp; &nbsp; 
       The book for this CORE 399 mentor group was not made available in the bookstore.<br>&nbsp; &nbsp; &nbsp; 
