Added EGR 204 course files, errata for Mano, Kime, and Martin 5th

--- a/F19/204F19.HTM
+++ b/F19/204F19.HTM
@@ -18,72 +18,77 @@ target="_top">
             Dordt College Engineering Department</A><BR><BR>
              INTRODUCTION TO MICROPROCESSORS AND <br>
                   DIGITAL CIRCUITS, EGR 204<BR> 
-                          (Spring 2013)</B></P>
+                          (Fall 2019)</B></P>
 </td></tr></table>
-<table align="center" width="420" border="0"><tr>
+<table align="center" style="width:480px" border="0"><tr>
 <!--<td width="42">&nbsp;</td>-->
 
 <!-- TEXTBOOK -->
-<td align="center" valign="bottom" width=140>
-<A HREF="http://www.writphotec.com/mano4/"
+<td align="center" valign="bottom" style="width:120px">
+<!--<td style="width:120px">-->
+<A HREF="http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308896.cw/index.html"
 target="_top">
-<img width="108" height="143"
+<img width="100" height="132"
 alt="'click'--> to publisher's page" hspace="0" 
-src="204/Mano_Kime_4e.jpg"
+src="204/ManoKimeMartin5Cover100x132_0133760634.png"
 border="0"></A><br>
 <A HREF=
-"http://www.writphotec.com/mano4/" target="_top">
+"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308896.cw/index.html" target="_top">
 <b>Our Textbook</b></a></td>
 
 <!-- DE BOER -->
-<td align="center" valign="bottom" width=140><br>
+<td align="center" valign="bottom" style="width:240px"><br>
+<!--<td style="width:120px">-->
 <A HREF="../index.html"
 target="_top">
-<img width="135" height="204" 
+<img width="135" height="165" 
 alt="'click'-->to De Boer's homepage" hspace="0" 
-src="204/deboer09_3k_g.jpg" 
+src="204/DeBoer_2016_135x165.jpg" 
 border="0"></A><br>
 <A HREF="../index.html"
 target="_top">
-<b>Prof. De Boer</b></a></td>
+<b>Prof. De Boer</b></a><br>
+Office Phone: 712-722-6245<br>
+<a href="mailto:Douglas.DeBoer@Dordt.edu">Douglas.DeBoer@Dordt.edu</a></td>
 
 <!-- LAB SOFTWARE --> 
-<td align="center" valign="bottom" width=140><br>
+<td align="center" valign="bottom" style="width:120px"><br>
+<!--<td style="width:120px">-->
 <A HREF=
-"204/QuartusII.htm"
+"204/Quartus.htm"
 target="_top">
-<img width="130" height="91" 
+<img width="110" height="138" 
 alt="'click'-->to Quartus II download page" hspace="0" 
-src="204/QuartusII.jpg" 
+src="204/Quartus_logo_110x138.png" 
 border="0"></A><br>
 <A HREF=
-"204/QuartusII.htm"
+"204/Quartus.htm"
 target="_top">
 <b>Lab Software</b></a></td>
+</tr></table>
 
 <!-- HOMEWORK --> 
 <!--<td width="42">&nbsp;</td>-->
-</tr></table>
 <table align="center" width="420"><tr><td><br>
-<P align="center"><A HREF="204/204S13PS.HTM" target="_top"
->Homework Assignments</A> 
-<BR>Homework must conform to these <A 
-HREF="HWSTDS13.HTM" target="_top">standards</A>.<BR>
+<P align="center"><A HREF="204/204F19PS.HTM" target="_top"
+>Homework Assignments</A><BR>
+Homework must conform to these <A 
+HREF="../integrity.htm" target="_top">standards</A>.<BR>
 The publisher provides <A target="_top" HREF=
-"http://www.writphotec.com/mano4/problem_solutions.html"
+"http://wps.pearsoned.com/ecs_mano_lcdf_5/248/63706/16308899.cw/content/index.html"
 >solutions to selected problems</A>.<BR>
 <!--(Homework assignments will be available <br> 
 starting Mon. January 15, 2007 at 5 PM.)-->
 </P> 
 
-<P align="center"><A HREF= "204/204S13SY.PDF" target="_top"
+<P align="center"><A HREF= "204/EGR204_Syllabus2019F_De_Boer_204F19SY_Intro_Micro_and_Digital.pdf" target="_top"
 >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc.<br>
 <!--(Course Syllabus will be available starting <br>
 Mon. January 15, 2007)--></P> 
 
 <P align="center"><A 
-HREF="../errata/Mano_Kime/4th/MK_4_ERR.HTM"
+HREF="../errata/Mano_Kime/5th/MKM_5_ERR.HTM"
 Target="_top">Textbook Errata</A></P> 
 
 <P align="center"><A HREF = "../index.html" Target="_top"
@@ -91,20 +96,20 @@ Target="_top">Textbook Errata</A></P>
 
 <P align="center"><small>
 (The main portal to this course for students is via <A 
-HREF="http://courses.dordt.edu/course/view.php?id=34"
-Target="_top">courses@dordt</A> 
+HREF="https://dordt.instructure.com/courses/2573771"
+Target="_top">Canvas@dordt</A> 
 <BR>The courses@dordt portal provides everything on this page and 
-more.<br>
-You may <a
-href="../cd_common/GUEST.HTM"
->request guest access</a> to courses@dordt)<BR><BR>
+more.<BR><BR>
 
-<a href="../S12/204S12.HTM">
+<a href="../S13/204S13.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course 
-<a href="../F19/204F19.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0">
-<br>
+offering of this course by Professor De Boer
+<!-- <a href="../S14/204S14.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"> -->
+<br><small>This course was offered in the Spring of 2014, 2015, 2016
+and in the fall of 2017 by other instructors.  It was not offered at 
+all in calendar year 2018 <br> 
+and it was not offered in the spring of 2019.</small>
 <BR> 
 </small></P> 
 
