--- a/errata/ERR.HTM
+++ b/errata/ERR.HTM
@@ -91,20 +91,21 @@
    HREF="Alexander_Sadiku/6th/A_S_6_ER.HTM"
    >6th edition</A></small> --><p></td></tr><tr><td>
    
-   <A HREF="Mano_Kime/4th/MK_4_ERR.HTM"><img src=
-   "Mano_Kime/4th/Mano_Kime_4e.jpg"
-   width="108" height="151" border="0"></A></td><td><p>
-   <A HREF="Mano_Kime/4th/MK_4_ERR.HTM"
->Mano and Kime <br><I>
+   <A HREF="Mano_Kime/5th/MKM_5_ERR.HTM"><img src=
+   "Mano_Kime/5th/ManoKimeMartin5Cover100x132_0133760634.png"
+   width="100" height="132" border="0"></A></td><td><p>
+   <A HREF="Mano_Kime/5th/MKM_5_ERR.HTM"
+>Mano Kime and Martin<br><I>
    Logic and Computer Design Findamentals</I><br> 
-   4th edition, Pearson Prentice-Hall, 2008.<br>
-   ISBN 0-13-198926-X (student edition)<br>
-   ISBN 0-13-600158-0 (instr's edition)</A><br><br>
+   5th edition, Pearson Prentice-Hall, 2008.<br>
+   ISBN 978-0-13-376063-7</A><br><br>
    <small><A 
    HREF="Mano_Kime/3rd/MK_3_ERR.HTM"
    >3rd edition</A>, &nbsp;&nbsp;&nbsp;<A 
    HREF="Mano_Kime/4th/MK_4_ERR.HTM"
-   >4th edition</A></small></p></td></tr><tr><td>
+   >4th edition</A>, &nbsp;&nbsp;&nbsp;<A 
+   HREF="Mano_Kime/5th/MKM_5_ERR.HTM"
+   >5th edition</A></small></p></td></tr><tr><td>
 
    <A HREF="Mohan/1/Mohan_1_ERR.HTM"><img src=
    "Mohan/1/Mohan_cover.jpg"
