--- a/errata/Mano_Kime/3rd/MK_3_ERR.HTM
+++ b/errata/Mano_Kime/3rd/MK_3_ERR.HTM
@@ -20,9 +20,10 @@ A:visited {color: #CC9900; font-weight:bold;
                        Third Edition, <br> 
          ISBN 0-13-140539-X, Pearson Prentice Hall, 2004.<br><br>
 
-            <small>(link to errata for the <a href=
-"../4th/MK_4_ERR.HTM"
-                >4th edition</a>)</small><br><br>
+            <small>(link to errata for the <a href="../5th/MKM_5_ERR.HTM"
+			                              >5th edition</a>)<br>
+			(link to errata for the <a href="../4th/MK_4_ERR.HTM"
+                                   >4th edition</a>)</small><br><br>
 
               <b>Before using the list below review the</b>
     <A HREF="http://www.writphotec.com/mano/text_errata.html"
