--- a/errata/Mano_Kime/4th/MK_4_ERR.HTM
+++ b/errata/Mano_Kime/4th/MK_4_ERR.HTM
@@ -23,9 +23,10 @@ TEXTBOOK ERRATA</a><br>
          ISBN 0-13-600158-0 (instructor's edition),<br> 
                  Pearson Prentice Hall, 2008.<br><br>
 
-            <small>(link to errata for the <a href=
-"../3rd/MK_3_ERR.HTM"
-                >3rd edition</a>)</small><br><br>
+            <small>(link to errata for the <a href="../5th/MKM_5_ERR.HTM"
+			                              >5th edtion</a>)<br>
+			       (link to errata for the <a href="../3rd/MK_3_ERR.HTM"
+                                          >3rd edition</a>)</small><br><br>
                 
                                                     <p><small>
 If you are considering purchasing this textbook and worrying that 
