--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -13,16 +13,17 @@ A:visited {color: #CC9900; font-weight:bold;
 <p align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                   (last update 2/23/2016)<br>
+                   (last update 5/29/2019)<br>
                                <br>
-   <img src="Mano_Kime_Martin_5e.jpg" width="110" height="145"><br>
+   <img src="ManoKimeMartin5Cover100x132_0133760634.png" width="100" height="132"><br>
   Mano, Kime, and Martin, <I>Logic and Computer Design Fundamentals</I>,<br>
                        Fifth Edition, Pearson, 2016.<br> 
           ISBN-13: 978-0-13-376063-7 or ISBN-10: 0-13-376063-4 <br><br>
                      
-            <small>(link to errata for the <a href=
-"../4th/MK_4_ERR.HTM"
-                >4th edition</a>)</small><br><br>
+            <small>(link to errata for the <a href="../4th/MK_4_ERR.HTM"
+                                          >4th edition</a>)<br>
+				   (link to errata for the <a href="../3rd/MK_3_ERR.HTM")
+				                          >3td edition</a>)</small><br><br>
                 
                                                     <p><small>
 If you are considering purchasing this textbook and worrying that 
@@ -41,6 +42,8 @@ to publish this list of errata.                    </small></p><br>
 <b>List of additional Errata:</b><br> -->
 
 </p>
+No errata have been logged for this edition to date.  (No work has
+been done to find errata as of yet.)<!--
                                            <A NAME="P_23"></A><b>
 Page 23, Seventh line of the 3rd paragraph down the page</b><br>
    Change "Table 1-3 on page 14" to "Table 1-4 on page 24."<br>
@@ -462,6 +465,8 @@ Page 629, Problem 12-1.</b><br>
         = 8 257 032 KiB (exactly)<br>
         = 8 063 MiB (exactly)<br>
         = 7.87 GiB (exactly)<br><br>
+		
+-->
 
 
 <br><br><br><hr>
