Stamped out the "college" word in F19/204F19.HTM, fixed a broken bookmark

--- a/F19/204F19.HTM
+++ b/F19/204F19.HTM
@@ -15,7 +15,7 @@ TABLE {font-family:"verdana"; font-size:10pt;}
 HREF="../redirect/Dordt_Engineering.htm"
 target="_top">
 
-            Dordt College Engineering Department</A><BR><BR>
+           Dordt University Engineering Department</A><BR><BR>
              INTRODUCTION TO MICROPROCESSORS AND <br>
                   DIGITAL CIRCUITS, EGR 204<BR> 
                           (Fall 2019)</B></P>
@@ -98,7 +98,7 @@ Target="_top">Textbook Errata</A></P>
 (The main portal to this course for students is via <A 
 HREF="https://dordt.instructure.com/courses/2573771"
 Target="_top">Canvas@dordt</A> 
-<BR>The courses@dordt portal provides everything on this page and 
+<BR>The Canvas@dordt portal provides everything on this page and 
 more.<BR><BR>
 
 <a href="../S13/204S13.HTM">
