--- a/bookmarks.html
+++ b/bookmarks.html
@@ -82,7 +82,7 @@ dl > dt > dl {
             <DT><H3 ADD_DATE="917027982" LAST_MODIFIED="1547589573">COURSES currently taught by Prof. De Boer</H3>
             <DL><p>
                 <DT><A HREF="https://dfdeboer.github.io/S19/170S19.HTM" ADD_DATE="1547589499" LAST_MODIFIED="1547589573">EGR 170 Engineering Programming for Inst and Auto</A>
-                <DT><A HREF="https://dfdeboer.github.io/S17/304S17.htm" ADD_DATE="1136906450" LAST_MODIFIED="1535056417">EGR 304 Embedded Microcomputer Systems (each spring)</A>
+                <DT><A HREF="https://dfdeboer.github.io/S17/304S17.HTM" ADD_DATE="1136906450" LAST_MODIFIED="1535056417">EGR 304 Embedded Microcomputer Systems (each spring)</A>
                 <DT><A HREF="https://dfdeboer.github.io/F18/322F18.HTM" ADD_DATE="1093966167" LAST_MODIFIED="1535056843">EGR 322 Electronics I (fall of even calendar years)</A>
                 <DT><A HREF="https://dfdeboer.github.io/S19/323S19.HTM" ADD_DATE="1105658341" LAST_MODIFIED="1547589242">EGR 323 Electronics II (spring of odd calendar years)</A>
                 <DT><A HREF="https://dfdeboer.github.io/F15/360F15.HTM" ADD_DATE="885855741" LAST_MODIFIED="1535056437">EGR 360 Introduction to Power Systems Analysis (fall odd calendar yrs)</A>
